--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ehqudgh12@gmail.com
-    password: snvnlauzknshbemc
+    username: 
+    password:
     properties:
       mail:
         smtp:
